src/test/deca/context/invalid/provided/testi21.deca
//Resultats :
//Erreur contextuelle
//Ligne 11 : int is undefined
class A{
}
class B{}
{   
    int x;
    A a = null;
    B b = new B();
    if (a instanceof int){
        print("il marche il marche encoree ...");
    }
}